Fix overflow issues on small screen

--- a/www/code/app-code.less
+++ b/www/code/app-code.less
@@ -146,6 +146,9 @@
                     flex: 1;
                     max-width: 100%;
                     resize: none;
+                    .CodeMirror-sizer > div {
+                        padding-bottom: 100px;
+                    }
                 }
                 #cp-app-code-preview {
                     display: none !important;
